Fix Theme: White BG Characters & Map Visibility (v0.9.17)

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ body {
     background-image: url('../assets/global_map_bg.png');
     background-repeat: repeat;
     background-size: 500px;
-    background-blend-mode: multiply;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
